# mprpc

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  friend.proto  user.proto
example/callee/: friendservice.cc  userservice.cc
example/caller/: callfriendservice.cc  callluserservice.cc  calluserservice.cc
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcprovider.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
